--- a/test/testcases/emoji.html
+++ b/test/testcases/emoji.html
@@ -1,5 +1,9 @@
 <p>Lorem ipsum dolor <img class="emoji" title=":smile:" alt=":smile:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f604.png" height="20" width="20" /> sit amet</p>
 
+<p>Lorem ipsum dolor <img class="emoji" title=":+1:" alt=":+1:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f44d.png" height="20" width="20" /> sit amet</p>
+
+<p>Lorem ipsum dolor <img class="emoji" title=":100:" alt=":100:" src="https://github.githubassets.com/images/icons/emoji/unicode/1f4af.png" height="20" width="20" /> sit amet</p>
+
 <p>Lorem ipsum dolor :custom: sit amet</p>
 
 <p>Lorem ipsum dolor <code>:smile:</code> sit amet</p>
